Findbug fixes